--- a/index.html
+++ b/index.html
@@ -596,14 +596,14 @@
       </div>
     </div>
 
-    <!-- CANVA EMBED (full-width, no black sides) -->
+    <!-- Google Slides embed (BoxAI deck) -->
     <div class="card" style="margin:0 auto; width:100%; background:#ffffff; padding:2rem 0;">
       <div style="position:relative; width:100%; height:0; padding-bottom:56.25%; background-color:#f4f4f4; overflow:hidden; border-radius:12px;">
         <iframe 
           loading="lazy"
           allowfullscreen
           style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;"
-          src="https://www.canva.com/design/DAG4C7nvR3o/ofmnSlNMHnoESH9J487gSA/view?embed">
+          src="https://docs.google.com/presentation/d/e/2PACX-1vQRoPWR69ub1fnW5sORhCuU3x6z51ScMT5zvVFZ23s6bm8B_tnojAQCG06Db5PT7A/pub?start=true&loop=false&delayms=5000">
         </iframe>
       </div>
     </div>
