--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
       </div>
 
       <div class="row" style="margin-top:20px;gap:12px;flex-wrap:wrap;justify-content:flex-start">
-        <a class="btn brand" href="https://patchwork-living-demo.my.canva.site/patchwork-living-pitch-deck-pptx" target="_blank" rel="noopener">📑 Innovation Deck</a>
+        <a class="btn brand" href="https://docs.google.com/presentation/d/e/2PACX-1vQx6r4Z2SwRsH7kV9Nct8qKXHXB1gPBO9Qk4R_wmRNJsPG1CwRVeYS231f-J_HDwQ/pub?start=true&loop=false&delayms=5000" target="_blank" rel="noopener">📑 Innovation Deck</a>
         <a class="btn secondary" href="https://vimeo.com/1124531545?share=copy" target="_blank" rel="noopener">🎧 Watch Walkthrough</a>
       </div>
     </div>
@@ -705,7 +705,7 @@
   <div class="container row" style="justify-content:space-between;align-items:center;gap:12px">
     <p class="small muted" style="margin:0">© <span id="year"></span> Patchwork Living</p>
     <nav class="row" style="gap:10px">
-      <a href="https://patchwork-living-demo.my.canva.site/patchwork-living-pitch-deck-pptx" target="_blank" rel="noopener">Innovation Deck</a>
+      <a href="https://docs.google.com/presentation/d/e/2PACX-1vQx6r4Z2SwRsH7kV9Nct8qKXHXB1gPBO9Qk4R_wmRNJsPG1CwRVeYS231f-J_HDwQ/pub?start=true&loop=false&delayms=5000" target="_blank" rel="noopener">Innovation Deck</a>
       <a href="https://vimeo.com/1124531545?share=copy" target="_blank" rel="noopener">Watch Walkthrough</a>
       <a href="#/privacy" onclick="event.preventDefault();alert('Privacy coming soon')">Privacy</a>
     </nav>
